first modified file

--- a/week01/poem homework/poem.html
+++ b/week01/poem homework/poem.html
@@ -7,7 +7,7 @@
     <title>Writing poem</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css_2/poem.css" />
  
         
 </head>
@@ -20,7 +20,7 @@
 <body>
     <br>
      <h1 onclick="popAlert()">망망대해</h1>
-		<script src="./js/index.js"></script> 
+		<script src="./js_2/poem.js"></script> 
         <p style="margin-top: 40px"></p>
         <div><h2>                                        김나영</h2></div>
         <p>나의 추억은</p>
