clone-coding edited

--- a/clone-coding/index.html
+++ b/clone-coding/index.html
@@ -36,32 +36,64 @@
              <li class="want_to_watch">보고싶어요</li>
             <div class="profile_box"> 
              <img class="profile_image" src="https://dhgywazgeek0d.cloudfront.net/watcha/image/upload/c_fill,h_300,w_300/profile2_uxl1zt.jpg" alt="프로필사진">
-              <li class="profile">이용자1</li>
+              <li class="profile">User 1</li>
                <span class="down_arrow">
                  <img src="./images/down-arrow.png" height="9"/>
                </span>
               </div>
            </div> 
        </div>   
-    </nav> 
+    </nav>
+</body> 
 
 
-<main>
-  <div class="slider">
-    <div class= "slide">
-        <h1 class="slide_title">4월 2주 신작 </h1>
-        <h2 class="slide_title_down">
-          <p style="height:30px;">타오르는 여인의 초상, 라빠르망,</p>
-          <p>어디갔어 버나뎃 등</p>
-     </h2>
-     <input type="button" value="목록 보기" class="button_list"/>
-  </div> 
-</div>   
-  
+<!-- MAIN SECTION -->
+<main id="about">
+    <div class="wrapper">
+        <div id="slider">
+            <img class="material-icons arrow--left" src="./images/left.png" height="20">      
+            <div class="slide slide1">
+               <h1 class="slide_title1">4월 2주 신작 </h1>
+                 <h2 class="slide_title_down1">
+                    <p style="height:30px;">타오르는 여인의 초상, 라빠르망,</p>
+                    <p>어디갔어 버나뎃 등</p> </h2>
+                     <input type="button" value="목록 보기" class="button_1"/> 
+              </div>
+            <div class="slide slide2">
+                <div class="slide__content">
+                    <span>I2</span>
+                </div>
+            </div>
+            <div class="slide slide3">
+                <div class="slide__content">
+                    <span>I3</span>
+                </div>
+            </div>
+            <div class="slide slide4">
+                <div class="slide__content">
+                    <span>I4</span>
+                </div>
+            </div>
+            <div class="slide slide5">
+                <div class="slide__content">
+                    <span>I5</span>
+                </div>
+            </div>
+            <div class="slide slide6">
+                <div class="slide__content">
+                    <span>I6</span>
+                </div>
+            </div>
+            <img class="material-icons arrow--right" src="./images/right.png" height="20">
+            <div class="dots">
+                <div class="dot dot1"></div>
+                <div class="dot dot2"></div>
+                <div class="dot dot3"></div>
+                <div class="dot dot4"></div>
+                <div class="dot dot5"></div>
+                <div class="dot dot6"></div>
+            </div>
+        </div>
+    </div>
 </main>
-
- <footer></footer>
-    
-</body>
-
 </html>
