--- a/clone-coding/index.html
+++ b/clone-coding/index.html
@@ -53,17 +53,19 @@
         <div id="slider">
             <img class="material-icons arrow--left" src="./images/left.png" height="20">      
             <div class="slide slide1">
-               <h1 class="slide_title1">4월 2주 신작 </h1>
-                 <h2 class="slide_title_down1">
+               <h1 class="slide_title">4월 2주 신작 </h1>
+                 <h2 class="slide_title_down">
                     <p style="height:30px;">타오르는 여인의 초상, 라빠르망,</p>
                     <p>어디갔어 버나뎃 등</p> </h2>
                      <input type="button" value="목록 보기" class="button_1"/> 
               </div>
             <div class="slide slide2">
-                <div class="slide__content">
-                    <span>I2</span>
-                </div>
-            </div>
+               <h1 class="slide_title"> 왓챠로 파티하자! </h1>
+                 <h2 class="slide_title_down">
+                    <p style="height:30px;">수다 떨면서 보면 더 재밌다!</p>
+                    <p>왓챠파티 감상 TOP 30</p> </h2>
+                     <input type="button" value="목록 보기" class="button_1"/>                 
+            </div> 
             <div class="slide slide3">
                 <div class="slide__content">
                     <span>I3</span>
