--- a/clone-coding/index.html
+++ b/clone-coding/index.html
@@ -24,8 +24,8 @@
             <a href="https://watcha.com/home"><img src="./images/logo.png" height="46" alt="로고이미지"></a> 
              <div class="menu_left">  
              <li class="home"><a href="">홈</a></li>
-             <li class="explore"><a href="">탐색하기</a></li>
-             <li class="evaluate"><a href="">평가하기</a></li>
+             <li class="explore">탐색하기</li>
+             <li class="evaluate">평가하기</li>
             </div>     
             <div class="menu_right">
               <div class="search_box">   
@@ -48,10 +48,10 @@
 
 
 <!-- MAIN SECTION -->
-<main id="about">
+<main>
     <div class="wrapper">
         <div id="slider">
-            <img class="material-icons arrow--left" src="./images/left.png" height="20">      
+          <img class="material-icons arrow--left" src="./images/left.png" height="20">      
             <div class="slide slide1">
                <h1 class="slide_title">4월 2주 신작 </h1>
                  <h2 class="slide_title_down">
@@ -97,5 +97,122 @@
             </div>
         </div>
     </div>
+
+  <section>
+     <ul>
+       <li class="container_1">
+           <div class="container_title">분위기 있는 홍콩영화</div>
+           <div class="watching_all">모두 보기
+             <img class="watching_all_icon" src="./images/모두보기.png" height="14" alt=""></div>
+           <div class="gradation"></div>
+             <div class="box">
+                <div class="title_text">
+                    <div>중경삼림</div> 
+                    <div>해피투게더</div> 
+                    <div>영웅본색</div> 
+                    <div>친니친니</div> 
+                    <div>패왕별희</div> 
+                    <div>타락천사</div>  
+                 </div>
+                 <a><img src="/images/중경삼림.jpg" height="140" alt=""></a>          
+                 <a><img src="/images/해피투게더.jpg" height="140" alt=""></a>                              
+                 <a><img src="/images/영웅본색.jpg" height="140" alt=""></a>               
+                 <a><img src="/images/친니친니.jpg" height="140" alt=""></a>             
+                 <a><img src="/images/패왕별희.jpg" height="140" alt=""></a>                 
+                 <a><img src="/images/타락천사.jpg" height="140" alt=""></a>         
+             </div>               
+        </li>   
+      <li class="container_2">
+           <div class="container_title_next">성장과 성찰</div>
+           <div class="watching_all_next">모두 보기
+              <img class="watching_all_icon_next" src="./images/모두보기.png" height="14" alt=""></div>
+              <div class="box">
+                 <div class="title_text_next">
+                     <div>미드 90</div> 
+                     <div class="movie_title_1">미스테리어스 스킨</div> 
+                     <div class="movie_title_2">허공에의 질주</div> 
+                     <div class="movie_title_3">싱스트리트</div> 
+                     <div class="movie_title_4">원더</div> 
+                     <div class="movie_title_5">벌새</div>  
+                  </div>
+                  <a><img src="/images/mid90s.jpg" height="140" alt=""></a>          
+                  <a><img src="/images/미스테리어스 스킨.png" height="140" alt=""></a>                              
+                  <a><img src="/images/허공에의 질주.jpg" height="140" alt=""></a>              
+                  <a><img src="/images/싱스트리트.jpg" height="140" alt=""></a>             
+                  <a><img src="/images/원더.jpg" height="140" alt=""></a>                 
+                  <a><img src="/images/벌새.jpg" height="140" alt=""></a>            
+              </div>               
+         </li>   
+         <li class="container_3">    
+             <div class="container_title_next">페미니즘의 시각으로</div>
+             <div class="watching_all_next">모두 보기
+                <img class="watching_all_icon_next" src="./images/모두보기.png" height="14" alt=""></div>  
+                <div class="box">
+                   <div class="title_text_next">
+                       <div>톰보이</div> 
+                       <div class="movie_title_6">거꾸로 가는 남자</div> 
+                       <div class="movie_title_7">델마와 루이스</div> 
+                       <div class="movie_title_8">친절한 금자씨</div> 
+                       <div class="movie_title_9">히든피겨스</div> 
+                       <div class="movie_title_10">82년생 김지영</div>  
+                    </div>
+                    <a><img src="/images/톰보이.jpg" height="140" alt=""></a>          
+                    <a><img src="/images/거꾸로 가는 남자.jpg" height="140" alt=""></a>                              
+                    <a><img src="/images/델마와 루이스.jpg" height="140" alt=""></a>              
+                    <a><img src="/images/친금자.jpg" height="140" alt=""></a>             
+                    <a><img src="/images/히든피겨스.jpg" height="140" alt=""></a>                 
+                    <a><img src="/images/김지영.jpg" height="140" alt=""></a>            
+               </div>               
+         </li>   
+         <li class="container_4">    
+          <div class="container_title_next">매력적인 타란티노의 영화</div>
+          <div class="watching_all_next">모두 보기
+             <img class="watching_all_icon_next" src="./images/모두보기.png" height="14" alt=""></div>  
+             <div class="box">
+                <div class="title_text_next">
+                    <div>킬 빌</div> 
+                    <div class="movie_title_11">저수지의 개들</div> 
+                    <div class="movie_title_12">바스터즈: 거친 녀석들</div> 
+                    <div class="movie_title_13">헤이트풀8</div> 
+                    <div class="movie_title_14">펄프픽션</div> 
+                    <div class="movie_title_15">장고</div>  
+                 </div>
+                 <a><img src="/images/킬빌.jpg" height="140" alt=""></a>          
+                 <a><img src="/images/저수지의 개들.jpg" height="140" alt=""></a>                              
+                 <a><img src="/images/바스터즈.jpg" height="140" alt=""></a>              
+                 <a><img src="/images/헤이트풀.jpg" height="140" alt=""></a>             
+                 <a><img src="/images/펄프픽션.jpg" height="140" alt=""></a>                 
+                 <a><img src="/images/장고.jpg" height="140" alt=""></a>            
+            </div>               
+
+            <li class="container_5">
+              <div class="container_title_next">90년대를 풍미한 한국 로맨스 영화</div>
+              <div class="watching_all_next">모두 보기
+                 <img class="watching_all_icon_next" src="./images/모두보기.png" height="14" alt=""></div>  
+                 <div class="box">
+                    <div class="title_text_next">
+                        <div>접속</div> 
+                        <div class="movie_title_16">8월의 크리스마스</div> 
+                        <div class="movie_title_17">봄날은 간다</div> 
+                        <div class="movie_title_18">클래식</div> 
+                        <div class="movie_title_19">엽기적인 그녀</div> 
+                        <div class="movie_title_20">후아유</div>  
+                     </div>
+                     <a><img src="/images/접속.png" height="140" alt=""></a>          
+                     <a><img src="/images/8월의 크리스마스.jpg" height="140" alt=""></a>                              
+                     <a><img src="/images/봄날은 간다.jpg" height="140" alt=""></a>              
+                     <a><img src="/images/클래식.jpg" height="140" alt=""></a>             
+                     <a><img src="/images/엽기적인그녀.jpeg" height="140" alt=""></a>                 
+                     <a><img src="/images/후아유.jpg" height="140" alt=""></a>            
+                </div>               
+              </li>
+      
+
+          
+         </li>
+        </ul>
+  </section>
+
 </main>
+
 </html>
