--- a/clone-coding/index.html
+++ b/clone-coding/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;600;700;800&family=Noto+Sans:wght@700&display=swap" rel="stylesheet">
     <!-- 헤더 스크롤 기능 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/desktop.css">
     <script defer src="./js/main.js"></script>
 </head>
 
@@ -51,7 +51,6 @@
            </div>
        </div>
     </nav>
-</body>
 
 
 <!-- MAIN SECTION -->
@@ -313,6 +312,7 @@
   </section>
 </main>
 
+
 <!-- 푸터 -->
 <footer>
   <!-- 세 단락 중 1번째 단락 -->
@@ -401,4 +401,8 @@
  </div>
 </footer>
 
+<!-- SCROLL TO TOP 버튼 -->
+<img class="btn scrollToTop"
+    src="./images/up.png" alt="업" />
+  </body>
 </html>
