main slider edited

--- a/clone-coding/index.html
+++ b/clone-coding/index.html
@@ -61,7 +61,7 @@
           <!-- 슬라이드를 왼쪽으로 넘기는 화살표 아이콘 -->
           <img class="material-icons arrow--left" src="./images/left.png" height="20">
           <!-- 1번째 슬라이드 -->
-            <div class="slide slide1">
+            <div class="slide fade slide1">
                <h1 class="slide_title">4월 2주 신작 </h1>
                  <h2 class="slide_title_down">
                     <p style="height:30px;">타오르는 여인의 초상, 라빠르망,</p>
@@ -70,7 +70,7 @@
                      <input type="button" value="목록 보기" class="button_1"/>
               </div>
               <!-- 2번째 슬라이드 -->
-            <div class="slide slide2">
+            <div class="slide fade slide2">
                <h1 class="slide_title"> 왓챠로 파티하자! </h1>
                  <h2 class="slide_title_down">
                     <p style="height:30px;">수다 떨면서 보면 더 재밌다!</p>
@@ -79,7 +79,7 @@
                      <input type="button" value="목록 보기" class="button_1"/>
             </div>
             <!-- 3번째 슬라이드 -->
-           <div class="slide slide3">
+           <div class="slide fade slide3">
              <!-- 3번째 슬라이드 제목 이미지 추가 -->
               <h1 class="slide_title3"><img src="./images/slide3_title.png" height="120" alt=""></h1>
                <h2 class="slide_title_down">
@@ -91,7 +91,7 @@
                  <input type="button" value="자세히 보기" class="button_4"/>
             </div>
             <!-- 4번째 슬라이드 -->
-            <div class="slide slide4">
+            <div class="slide fade slide4">
               <h1 class="slide_title"> 괴물을 알아볼 수 있나요? </h1>
               <h2 class="slide_title_down">
                  <p style="height:30px;">심연과 아이컨택하는</p>
@@ -100,7 +100,7 @@
                   <input type="button" value="목록 보기" class="button_1"/>
                   </div>
            <!-- 5번째 슬라이드 -->
-          <div class="slide slide5">
+          <div class="slide fade slide5">
             <!-- 5번째 슬라이드 제목 이미지 -->
             <h1 class="slide_title5"><img src="./images/Harry-Potter-Logo.png" height="170" alt=""></h1>
             <h2 class="slide_title_down">
@@ -110,7 +110,7 @@
                 <input type="button" value="목록 보기" class="button_1"/>
           </div>
           <!-- 6번째 슬라이드 -->
-          <div class="slide slide6">
+          <div class="slide fade slide6">
             <!-- 6번째 슬라이드 제목 이미지 -->
             <h1 class="slide_title6"><img src="./images/slide6_logo.png" height="180" alt=""></h1>
             <h2 class="slide_title_down">
@@ -282,7 +282,7 @@
             <!-- 6번째 줄에 있는 영화 컨테이너 -->
             <li class="container_6">
               <!-- 영화 컨테이너 타이틀 -->
-              <div class="container_title_next">기이한 에너지로 가득 차있는 작품들</div>
+              <div class="container_title_next">기이한 에너지로 가득 차있는 작품</div>
               <!-- 컨테이너 오른쪽에 있는 모두 보기 -->
               <div class="watching_all_next">모두 보기
                  <!-- 모두 보기 아이콘 -->
@@ -307,6 +307,171 @@
                      <a><img src="/images/케빈에 대하여.jpg" height="140" alt=""></a>
                 </div>
               </li>
+
+              <li class="container_7">
+                <!-- 영화 컨테이너 타이틀 -->
+                <div class="container_title_next">크리스토퍼 놀란의 작품</div>
+                <!-- 컨테이너 오른쪽에 있는 모두 보기 -->
+                <div class="watching_all_next">모두 보기
+                   <!-- 모두 보기 아이콘 -->
+                   <img class="watching_all_icon_next" src="./images/모두보기.png" height="14" alt=""></div>
+                   <!-- 영화들을 담은 박스 -->
+                   <div class="box">
+                      <!--영화 각각의 제목 -->
+                      <div class="title_text_next">
+                          <div>메멘토</div>
+                          <div class="movie_title_26">다크나이트 라이즈</div>
+                          <div class="movie_title_27">인셉션</div>
+                          <div class="movie_title_28">덩케르크</div>
+                          <div class="movie_title_29">다크나이트</div>
+                          <div class="movie_title_30">인터스텔라</div>
+                       </div>
+                       <!-- 영화 각각의 썸네일 -->
+                       <a><img src="/images/메멘토.jpg" height="140" alt=""></a>
+                       <a><img src="/images/닼나라.jpg" height="140" alt=""></a>
+                       <a><img src="/images/인셉션.jpg" height="140" alt=""></a>
+                       <a><img src="/images/덩케르크.png" height="140" alt=""></a>
+                       <a><img src="/images/다크나이트.jpg" height="140" alt=""></a>
+                       <a><img src="/images/인터스텔라.jpg" height="140" alt=""></a>
+                  </div>
+                </li>
+
+                <li class="container_8">
+                  <!-- 영화 컨테이너 타이틀 -->
+                  <div class="container_title_next">낯선 아름다움, 유럽 영화</div>
+                  <!-- 컨테이너 오른쪽에 있는 모두 보기 -->
+                  <div class="watching_all_next">모두 보기
+                     <!-- 모두 보기 아이콘 -->
+                     <img class="watching_all_icon_next" src="./images/모두보기.png" height="14" alt=""></div>
+                     <!-- 영화들을 담은 박스 -->
+                     <div class="box">
+                        <!--영화 각각의 제목 -->
+                        <div class="title_text_next">
+                            <div>서스페리아</div>
+                            <div class="movie_title_31">가장 따뜻한 색,블루</div>
+                            <div class="movie_title_32">무드 인디고</div>
+                            <div class="movie_title_33">빌리 엘리어트</div>
+                            <div class="movie_title_34">콜 미 바이 유어 네임</div>
+                            <div class="movie_title_35">수면의 과학</div>
+                         </div>
+                         <!-- 영화 각각의 썸네일 -->
+                         <a><img src="/images/서스페리아.jpg" height="140" alt=""></a>
+                         <a><img src="/images/가따블.jpg" height="140" alt=""></a>
+                         <a><img src="/images/무드인디고.jpg" height="140" alt=""></a>
+                         <a><img src="/images/빌리엘리어트.jpg" height="140" alt=""></a>
+                         <a><img src="/images/콜바넴.jpg" height="140" alt=""></a>
+                         <a><img src="/images/수면의 과학.jpg" height="140" alt=""></a>
+                    </div>
+                  </li>
+
+                   <li class="container_9">
+                  <!-- 영화 컨테이너 타이틀 -->
+                  <div class="container_title_next">취향저격 하이틴</div>
+                  <!-- 컨테이너 오른쪽에 있는 모두 보기 -->
+                  <div class="watching_all_next">모두 보기
+                     <!-- 모두 보기 아이콘 -->
+                     <img class="watching_all_icon_next" src="./images/모두보기.png" height="14" alt=""></div>
+                     <!-- 영화들을 담은 박스 -->
+                     <div class="box">
+                        <!--영화 각각의 제목 -->
+                        <div class="title_text_next">
+                            <div>플립</div>
+                            <div class="movie_title_36">프린세스 다이어리</div>
+                            <div class="movie_title_37">클루리스</div>
+                            <div class="movie_title_38">퀸카로 살아남는 법</div>
+                            <div class="movie_title_39">내가 널 사랑할 수 없는 10가지 이유</div>
+                            <div class="movie_title_40">월플라워</div>
+                         </div>
+                         <!-- 영화 각각의 썸네일 -->
+                         <a><img src="/images/플립.jpg" height="140" alt=""></a>
+                         <a><img src="/images/프린세스다이어리.jpg" height="140" alt=""></a>
+                         <a><img src="/images/클루리스.jpg" height="140" alt=""></a>
+                         <a><img src="/images/퀸카로 살아남는 법.jpg" height="140" alt=""></a>
+                         <a><img src="/images/10-Things-I-Hate-About-You.jpg" height="140" alt=""></a>
+                         <a><img src="/images/월플라워.jpg" height="140" alt=""></a>
+                    </div>
+                  </li>
+                  <li class="container_10">
+                    <!-- 영화 컨테이너 타이틀 -->
+                    <div class="container_title_next">화제의 감독 팀버튼의 작품</div>
+                    <!-- 컨테이너 오른쪽에 있는 모두 보기 -->
+                    <div class="watching_all_next">모두 보기
+                       <!-- 모두 보기 아이콘 -->
+                       <img class="watching_all_icon_next" src="./images/모두보기.png" height="14" alt=""></div>
+                       <!-- 영화들을 담은 박스 -->
+                       <div class="box">
+                          <!--영화 각각의 제목 -->
+                          <div class="title_text_next">
+                              <div>가위손</div>
+                              <div class="movie_title_41">미스 페레그린과 이상한 아이들의 집 </div>
+                              <div class="movie_title_42">빅피쉬</div>
+                              <div class="movie_title_43">비틀쥬스</div>
+                              <div class="movie_title_44">찰리와 초콜릿 공장</div>
+                              <div class="movie_title_45">유령신부</div>
+                           </div>
+                           <!-- 영화 각각의 썸네일 -->
+                           <a><img src="/images/가위손.jpg" height="140" alt=""></a>
+                           <a><img src="/images/미스페레그린.jpg" height="140" alt=""></a>
+                           <a><img src="/images/빅피쉬.jpg" height="140" alt=""></a>
+                           <a><img src="/images/비틀쥬스.jpg" height="140" alt=""></a>
+                           <a><img src="/images/찰리와초콜릿공장.jpg" height="140" alt=""></a>
+                           <a><img src="/images/유령신부.jpg" height="140" alt=""></a>
+                      </div>
+                    </li>
+                    <li class="container_11">
+                      <!-- 영화 컨테이너 타이틀 --> 
+                      <div class="container_title_next">디즈니&픽사 영화</div>
+                      <!-- 컨테이너 오른쪽에 있는 모두 보기 -->
+                      <div class="watching_all_next">모두 보기
+                         <!-- 모두 보기 아이콘 -->
+                         <img class="watching_all_icon_next" src="./images/모두보기.png" height="14" alt=""></div>
+                         <!-- 영화들을 담은 박스 -->
+                         <div class="box">
+                            <!--영화 각각의 제목 -->
+                            <div class="title_text_next">
+                                <div>코코</div>
+                                <div class="movie_title_46">업</div>
+                                <div class="movie_title_47">인사이드 아웃</div>
+                                <div class="movie_title_48">소울</div>
+                                <div class="movie_title_49">토이스토리</div>
+                                <div class="movie_title_50">주먹왕 랄프</div>
+                             </div>
+                             <!-- 영화 각각의 썸네일 -->
+                             <a><img src="/images/코코.jpg" height="140" alt=""></a>
+                             <a><img src="/images/up.jpg" height="140" alt=""></a>
+                             <a><img src="/images/인사이드아웃.jpg" height="140" alt=""></a>
+                             <a><img src="/images/소울.jpg" height="140" alt=""></a>
+                             <a><img src="/images/토이스토리.jpg" height="140" alt=""></a>
+                             <a><img src="/images/주먹왕랄프.jpg" height="140" alt=""></a>
+                        </div>
+                      </li> 
+                      <li class="container_12">
+                        <!-- 영화 컨테이너 타이틀 -->
+                        <div class="container_title_next">아카데미 감독상 수상작</div>
+                        <!-- 컨테이너 오른쪽에 있는 모두 보기 -->
+                        <div class="watching_all_next">모두 보기
+                           <!-- 모두 보기 아이콘 -->
+                           <img class="watching_all_icon_next" src="./images/모두보기.png" height="14" alt=""></div>
+                           <!-- 영화들을 담은 박스 -->
+                           <div class="box">
+                              <!--영화 각각의 제목 -->
+                              <div class="title_text_next">
+                                  <div>기생충</div>
+                                  <div class="movie_title_51">라라랜드</div>
+                                  <div class="movie_title_52">라이프 오브 파이</div>
+                                  <div class="movie_title_53">타이타닉</div>
+                                  <div class="movie_title_54">셰이프 오브 워터</div>
+                                  <div class="movie_title_55">양들의 침묵</div>
+                               </div>
+                               <!-- 영화 각각의 썸네일 -->
+                               <a><img src="/images/기생충.jpg" height="140" alt=""></a>
+                               <a><img src="/images/라라랜드.jpg" height="140" alt=""></a>
+                               <a><img src="/images/라이프오브파이.png" height="140" alt=""></a>
+                               <a><img src="/images/타이타닉.jpg" height="140" alt=""></a>
+                               <a><img src="/images/셰이프오브워터.jpeg" height="140" alt=""></a>
+                               <a><img src="/images/양들의 침묵.jpg" height="140" alt=""></a>
+                          </div>  
+                        </li>       
           </li>
       </div>
   </section>
