--- a/clone-coding/index.html
+++ b/clone-coding/index.html
@@ -30,14 +30,14 @@
              <li class="explore">탐색하기</li>
              <li class="evaluate">평가하기</li>
             </div>
-            <!-- 헤더 오른쪽 메뉴 -->
-            <div class="menu_right">
-              <div class="search_box">
-                <!-- 검색 아이콘 -->
-               <span class="search_button">
-                 <img src="./images/search_button.png" height="14" /></span>
-                   <li class="search">검색</li>
-              </div>
+           <!-- 헤더 오른쪽 메뉴 -->
+           <div class="menu_right">
+            <div class="search_box">
+              <!-- 검색 아이콘 -->
+             <span class="search_button">
+               <img src="./images/search_button.png" height="14" /></span>
+                 <li class="search">검색</li>
+                 </div>    
              <li class="want_to_watch">보고싶어요</li>
             <div class="profile_box">
               <!-- 프로필 이미지 -->
@@ -139,7 +139,7 @@
   <section id="sub_main">
      <div>
        <!-- 1번째 줄에 있는 영화 컨테이너 -->
-       <li class="container_1">
+       <li class="container 1">
          <!-- 영화 컨테이너 타이틀 -->
            <div class="container_title">분위기 있는 홍콩영화</div>
            <!-- 컨테이너 오른쪽에 있는 모두 보기 -->
@@ -148,8 +148,8 @@
              <img class="watching_all_icon" src="./images/모두보기.png" height="14" alt=""></div>
            <!-- 메인 슬라이드와 첫 번째 컨테이너를 자연스럽게 연결하기 위해 그라데이션 생성 -->
             <div class="gradation"></div>
-            <!-- 영화들을 담은 박스 -->
-             <div class="box">
+            <!-- 영화들을 담은 박스 -->         
+                <div class="box"> 
                <!--영화 각각의 제목 -->
                 <div class="title_text">
                     <div>중경삼림</div>
@@ -158,7 +158,7 @@
                     <div>친니친니</div>
                     <div>패왕별희</div>
                     <div>타락천사</div>
-                 </div>
+                </div>
                  <!-- 영화 각각의 썸네일 -->
                  <a><img src="/images/중경삼림.jpg" height="140" alt=""></a>
                  <a><img src="/images/해피투게더.jpg" height="140" alt=""></a>
@@ -169,7 +169,7 @@
              </div>
         </li>
         <!-- 2번째 줄에 있는 영화 컨테이너 -->
-      <li class="container_2">
+      <li class="container 2">
         <!-- 영화 컨테이너 타이틀 -->
            <div class="container_title_next">성장과 성찰</div>
            <!-- 컨테이너 오른쪽에 있는 모두 보기 -->
@@ -197,7 +197,7 @@
               </div>
          </li>
          <!-- 3번째 줄에 있는 영화 컨테이너 -->
-         <li class="container_3">
+         <li class="container 3">
              <!-- 영화 컨테이너 타이틀 -->
              <div class="container_title_next">페미니즘의 시각으로</div>
              <!-- 컨테이너 오른쪽에 있는 모두 보기 -->
@@ -225,7 +225,7 @@
                </div>
             </li>
           <!-- 4번째 줄에 있는 영화 컨테이너 -->
-          <li class="container_4">
+          <li class="container 4">
             <!-- 영화 컨테이너 타이틀 -->
           <div class="container_title_next">매력적인 타란티노의 영화</div>
           <!-- 컨테이너 오른쪽에 있는 모두 보기 -->
@@ -252,7 +252,7 @@
                  <a><img src="/images/장고.jpg" height="140" alt=""></a>
             </div>
             <!-- 5번째 줄에 있는 영화 컨테이너 -->
-            <li class="container_5">
+            <li class="container 5">
               <!-- 영화 컨테이너 타이틀 -->
               <div class="container_title_next">90년대를 풍미한 한국 로맨스 영화</div>
               <!-- 컨테이너 오른쪽에 있는 모두 보기 -->
@@ -280,7 +280,7 @@
                 </div>
               </li>
             <!-- 6번째 줄에 있는 영화 컨테이너 -->
-            <li class="container_6">
+            <li class="container 6">
               <!-- 영화 컨테이너 타이틀 -->
               <div class="container_title_next">기이한 에너지로 가득 차있는 작품</div>
               <!-- 컨테이너 오른쪽에 있는 모두 보기 -->
@@ -308,7 +308,7 @@
                 </div>
               </li>
 
-              <li class="container_7">
+              <li class="container 7">
                 <!-- 영화 컨테이너 타이틀 -->
                 <div class="container_title_next">크리스토퍼 놀란의 작품</div>
                 <!-- 컨테이너 오른쪽에 있는 모두 보기 -->
@@ -336,7 +336,7 @@
                   </div>
                 </li>
 
-                <li class="container_8">
+                <li class="container 8">
                   <!-- 영화 컨테이너 타이틀 -->
                   <div class="container_title_next">낯선 아름다움, 유럽 영화</div>
                   <!-- 컨테이너 오른쪽에 있는 모두 보기 -->
@@ -364,7 +364,7 @@
                     </div>
                   </li>
 
-                   <li class="container_9">
+                   <li class="container 9">
                   <!-- 영화 컨테이너 타이틀 -->
                   <div class="container_title_next">취향저격 하이틴</div>
                   <!-- 컨테이너 오른쪽에 있는 모두 보기 -->
@@ -391,7 +391,7 @@
                          <a><img src="/images/월플라워.jpg" height="140" alt=""></a>
                     </div>
                   </li>
-                  <li class="container_10">
+                  <li class="container 10">
                     <!-- 영화 컨테이너 타이틀 -->
                     <div class="container_title_next">화제의 감독 팀버튼의 작품</div>
                     <!-- 컨테이너 오른쪽에 있는 모두 보기 -->
@@ -418,7 +418,7 @@
                            <a><img src="/images/유령신부.jpg" height="140" alt=""></a>
                       </div>
                     </li>
-                    <li class="container_11">
+                    <li class="container 11">
                       <!-- 영화 컨테이너 타이틀 --> 
                       <div class="container_title_next">디즈니&픽사 영화</div>
                       <!-- 컨테이너 오른쪽에 있는 모두 보기 -->
@@ -445,7 +445,7 @@
                              <a><img src="/images/주먹왕랄프.jpg" height="140" alt=""></a>
                         </div>
                       </li> 
-                      <li class="container_12">
+                      <li class="container 12">
                         <!-- 영화 컨테이너 타이틀 -->
                         <div class="container_title_next">아카데미 감독상 수상작</div>
                         <!-- 컨테이너 오른쪽에 있는 모두 보기 -->
